@@ -1,3 +1,4 @@
+- Finding .vim and .vimrc has been simplified, see the readme.
 - When pull fails, remove and re-clone the repo instead of bailing.
 - vim-update-bundles no longer symlinks .vim and .vimrc into $HOME.
 - Remove the dotfile_path option, it's not necessary anymore.
